--- a/project_my_part/package.json
+++ b/project_my_part/package.json
@@ -12,7 +12,8 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "fast-csv": "^4.3.5",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.4.16"
   },
   "devDependencies": {},
   "scripts": {
